test/ui/tests/fail/missing-class-clone.stderr
error[E0277]: the trait bound `Point: Clone` is not satisfied
 --> tests/fail/missing-class-clone.rs:6:1
  |
  6 | #[neon::class]
    | ^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `Point`
    |
    = help: the following other types implement trait `FromArgs<'cx>`:
              ()
              (T1, T2)
              (T1, T2, T3)
              (T1, T2, T3, T4)
              (T1, T2, T3, T4, T5)
              (T1, T2, T3, T4, T5, T6)
              (T1, T2, T3, T4, T5, T6, T7)
              (T1, T2, T3, T4, T5, T6, T7, T8)
            and $N others
note: required for `Point` to implement `TryFromJs<'_>`
   --> tests/fail/missing-class-clone.rs:6:1
    |
  6 | #[neon::class]
    | ^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
  7 | impl Point {
    |      ^^^^^
    = note: required for `(Point,)` to implement `FromArgs<'_>`
note: required by a bound in `FunctionContext::<'cx>::args`
   --> $WORKSPACE/crates/neon/src/context/mod.rs
    |
    |     pub fn args<T>(&mut self) -> NeonResult<T>
    |            ---- required by a bound in this associated function
    |     where
    |         T: FromArgs<'cx>,
    |            ^^^^^^^^^^^^^ required by this bound in `FunctionContext::<'cx>::args`
    = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Point` with `#[derive(Clone)]`
    |
  1 + #[derive(Clone)]
  2 | struct Point {
    |
